--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
     <h1>People entered:</h1>
-    <h2 id = "count">0</h2>
+    <h2 id = "count-el">0</h2> 
+    <script>
+        document.getElementById("count-el").innerText = 5
+    </script>
 </body>
 </html>
