--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 </head>
 <body>
     <h1>People entered:</h1>
-    <h2 id = "count-el">0</h2> 
-    <script>
-        document.getElementById("count-el").innerText = 5
+    <h2 id = "count">0</h2> 
+    <script src = "index.js">
     </script>
 </body>
 </html>
