--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <h1>People entered:</h1>
     <h2 id = "count">0</h2> 
+    <button id = "increment-btn">INCREMENT</button>
     <script src = "index.js">
     </script>
 </body>
