--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 </head>
 <body>
     <h1>People entered:</h1>
-    <h2 id = "count">0</h2> 
-    <button id = "increment-btn">INCREMENT</button>
+    <h2 id = "count-el">0</h2> 
+    <button id = "increment-btn" 
+      onclick = "increment()" 
+      >
+      INCREMENT
+    </button>
     <script src = "index.js">
     </script>
 </body>
