--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       >
       INCREMENT
     </button>
+    <button id = "decrement-btn" 
+      onclick = "decrement()" 
+      >
+      DECREMENT
+    </button>
     <script src = "index.js">
     </script>
 </body>
