save in a console

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       >
       INCREMENT
     </button>
+    <button id = "save-btn"
+      onClick = "save()"
+      >
+      SAVE
+    </button>
     <button id = "decrement-btn" 
       onclick = "decrement()" 
       >
