--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel = "stylesheet" href = "index.css">
@@ -23,5 +23,16 @@
     </button>
     <script src = "index.js">
     </script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+</head>
+<body>
+   <p id = "welcome-el"></p>
+   <script src = "index.js"></script>
 </body>
 </html>
