--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel = "stylesheet" href = "index.css">
 </head>
 <body>
-    <h1>People entered:</h1>
+    <!-- <h1>People entered:</h1>
     <h2 id = "count-el">0</h2> 
     <button id = "increment-btn" 
       onclick = "increment()" 
@@ -21,7 +21,31 @@
       onclick = "decrement()" 
       >
       DECREMENT
+    </button> -->
+    <button 
+       id = "add"
+       onclick = "Add()"
+       >
+        Add
     </button>
+    <button 
+    id = "subtract"
+    onclick = "Subtract()"
+    >
+     Subtract
+    </button>
+    <button 
+      id = "divide"
+      onclick = "Divide()"
+      >
+      Divide
+    </button>
+    <button 
+    id = "multiply"
+    onclick = "Multiply()"
+    >
+     Multiply
+ </button>
     <script src = "index.js">
     </script>
 </body>
