--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       >
       DECREMENT
     </button> -->
+    <span id = "num1-el">8</span>
+    <span id = "num2-el">2</span>
+    <br>
     <button 
        id = "add"
        onclick = "Add()"
@@ -46,6 +49,7 @@
     >
      Multiply
  </button>
+ <span id = "sum-el">Sum:</span>
     <script src = "index.js">
     </script>
 </body>
