--- a/index.html
+++ b/index.html
@@ -24,28 +24,30 @@
     </button> -->
     <span id = "num1-el">8</span>
     <span id = "num2-el">2</span>
+    
     <br>
     <button 
        id = "add"
-       onclick = "Add()"
+       onclick = "add()"
        >
         Add
     </button>
+    <p id="sum-el"></p>
     <button 
     id = "subtract"
-    onclick = "Subtract()"
+    onclick = "subtract()"
     >
      Subtract
     </button>
     <button 
       id = "divide"
-      onclick = "Divide()"
+      onclick = "divide()"
       >
       Divide
     </button>
     <button 
     id = "multiply"
-    onclick = "Multiply()"
+    onclick = "multiply()"
     >
      Multiply
  </button>
