--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       >
       DECREMENT
     </button> -->
-    <span id = "num1-el">8</span>
+    <!-- <span id = "num1-el">8</span>
     <span id = "num2-el">2</span>
     
     <br>
@@ -50,7 +50,11 @@
     >
      Multiply
  </button>
- <span id = "sum-el">Sum:</span>
+ <span id = "sum-el">Sum:</span> -->
+    <h1>Blackjack</h1>
+    <p id = "message-el">Want to play a round?</p>
+    <p>Cards : </p>
+    <p>Sum :</p>
     <script src = "index.js">
     </script>
 </body>
