showing cards on the screen

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  <span id = "sum-el">Sum:</span> -->
     <h1>Blackjack</h1>
     <p id = "message-el">Want to play a round?</p>
-    <p>Cards : </p>
+    <p id = "cards-el">Cards : </p>
     <p id = "sum-el">Sum :</p>
     <!-- 1. Create a button that says START GAME.
      Make it call a startGame() function when clicked -->
