--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <!-- 1. Create a button that says START GAME.
      Make it call a startGame() function when clicked -->
      <button onclick = "startGame()">START GAME</button>
+     <button onclick = "newCard()">NEW CARD</button>
     <script src = "index.js">
     </script>
 </body>
