if ,else if ,else

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <link rel = "stylesheet" href = "index.css">
 </head>
-<body>
-    <!-- <h1>People entered:</h1>
+<body> 
+     <!-- <h1>People entered:</h1>
     <h2 id = "count-el">0</h2> 
     <button id = "increment-btn" 
       onclick = "increment()" 
@@ -21,8 +21,8 @@
       onclick = "decrement()" 
       >
       DECREMENT
-    </button> -->
-    <!-- <span id = "num1-el">8</span>
+    </button>
+   <span id = "num1-el">8</span>
     <span id = "num2-el">2</span>
     
     <br>
@@ -49,14 +49,14 @@
     onclick = "multiply()"
     >
      Multiply
- </button>
- <span id = "sum-el">Sum:</span> -->
+ </button> -->
+ <!-- <span id = "sum-el">Sum:</span>  -->
     <h1>Blackjack</h1>
     <p id = "message-el">Want to play a round?</p>
     <p id = "cards-el">Cards : </p>
-    <p id = "sum-el">Sum :</p>
-    <!-- 1. Create a button that says START GAME.
-     Make it call a startGame() function when clicked -->
+    <p id = "sum-el">Sum :</p> 
+     <!-- 1. Create a button that says START GAME.
+     Make it call a startGame() function when clicked  -->
      <button onclick = "startGame()">START GAME</button>
      <button onclick = "newCard()">NEW CARD</button>
     <script src = "index.js">
@@ -65,7 +65,7 @@
 </html>
 
 
-<!-- <!DOCTYPE html>
+ <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 </head>
@@ -73,4 +73,4 @@
    <p id = "welcome-el"></p>
    <script src = "index.js"></script>
 </body>
-</html> -->
+</html>  -->
