--- a/index.html
+++ b/index.html
@@ -4,73 +4,16 @@
     <link rel = "stylesheet" href = "index.css">
 </head>
 <body> 
-     <!-- <h1>People entered:</h1>
-    <h2 id = "count-el">0</h2> 
-    <button id = "increment-btn" 
-      onclick = "increment()" 
-      >
-      INCREMENT
-    </button>
-    <p id="error"></p>
-    <button id = "save-btn"
-      onClick = "save()"
-      >
-      SAVE
-    </button>
-    <button id = "decrement-btn" 
-      onclick = "decrement()" 
-      >
-      DECREMENT
-    </button>
-   <span id = "num1-el">8</span>
-    <span id = "num2-el">2</span>
-    
-    <br>
-    <button 
-       id = "add"
-       onclick = "add()"
-       >
-        Add
-    </button>
-    <button 
-    id = "subtract"
-    onclick = "subtract()"
-    >
-     Subtract
-    </button>
-    <button 
-      id = "divide"
-      onclick = "divide()"
-      >
-      Divide
-    </button>
-    <button 
-    id = "multiply"
-    onclick = "multiply()"
-    >
-     Multiply
- </button> -->
- <!-- <span id = "sum-el">Sum:</span>  -->
     <h1>Blackjack</h1>
     <p id = "message-el">Want to play a round?</p>
     <p id = "cards-el">Cards : </p>
     <p id = "sum-el">Sum :</p> 
-     <!-- 1. Create a button that says START GAME.
-     Make it call a startGame() function when clicked  -->
      <button onclick = "startGame()">START GAME</button>
      <button onclick = "newCard()">NEW CARD</button>
+     <p id = "player-el"></p>
     <script src = "index.js">
     </script>
 </body>
 </html>
 
 
- <!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-</head>
-<body>
-   <p id = "welcome-el"></p>
-   <script src = "index.js"></script>
-</body>
-</html>  -->
