--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
+<!-- Chrome extensions -->
+
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <input type = "text" id = "input-el">
+    <button id = "input-btn">SAVE INPUT</button>
+    <script src = "index.js"></script>
+</body>
+</html>
+
+
+
+
+ <!-- Blackjack Game :::: -->
+ 
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel = "stylesheet" href = "index.css">
@@ -14,6 +36,4 @@
     <script src = "index.js">
     </script>
 </body>
-</html>
-
-
+</html> -->
