--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel = "stylesheet" href = "index.css">
 </head>
 <body>
-    <input type = "text" id = "input-el">
-    <button id = "input-btn">SAVE INPUT</button>
+    <input type = "text" id = "input-el" >
+    <button id = "input-btn" onclick="saveLead()">SAVE INPUT</button>
     <script src = "index.js"></script>
 </body>
 </html>
