--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel = "stylesheet" href = "index.css">
+</head>
+<body>
+    <div id = "box">Open the box!</div>
+    <script src = "index.js"></script>
+</body>
+</html>
+
+
+
 <!-- Chrome extensions -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +31,7 @@
     <button id = "input-btn" onclick="saveLead()">SAVE INPUT</button>
     <script src = "index.js"></script>
 </body>
-</html>
+</html> -->
 
 
 
