--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
+
+<!-- Chrome extensions -->
+
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel = "stylesheet" href = "index.css">
+</head>
+<body>
+    <input type = "text" id = "input-el" >
+    <button id = "input-btn" >SAVE INPUT</button>
+    <script src = "index.js"></script>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,27 +32,9 @@
     <div id = "box">Open the box!</div>
     <script src = "index.js"></script>
 </body>
-</html>
-
-
-
-<!-- Chrome extensions -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel = "stylesheet" href = "index.css">
-</head>
-<body>
-    <input type = "text" id = "input-el" >
-    <button id = "input-btn" onclick="saveLead()">SAVE INPUT</button>
-    <script src = "index.js"></script>
-</body>
 </html> -->
+
+
 
 
 
